--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>br.com.andrejbezbirolo</groupId>
     <artifactId>rocketseat-todolist</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>rocketseat-todolist</name>
     <description>rocketseat-todolist</description>
     <properties>
